Fix: Fixed Navigation names on footer and main Wesite Name spacing

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ html, body {
 }
 
 .text-space {
-  padding-right: 5px;
+  
 }
 nav {
   position: fixed;
